docs: enrich documentation and bump version to v2.0.0
- Performed a deep documentation overhaul for Core, SDK, and CLI.
- Improved security advice in READMEs (recommended shard keygen).
- Standardized error handling in code examples (replaced unwrap with ?).
- Updated workspace version to v2.0.0 to mark the official Shard 2.0 release.